--- a/index.html
+++ b/index.html
@@ -461,7 +461,7 @@ function AgentIntro() {
 </head>
 <body>
   <div class="image-container">
-    <img class="responsive-image" src="rule34.gif" alt="NICKERS">
+    <img class="responsive-image" src="rule34.gif" alt="NICKERS" height="420" width="420">
   </div>
 </body>
 </html>
